added source to the location info
